[package]
name = "wiki_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.3"
serde = { version = "1.0", features=["derive"]}
bincode2 = "2.0.1"

[[bench]]
name = "benchmark"
harness = false